# vio

src/vio_stereo/: CMakeLists.txt  package.xml
src/vio_stereo/config/a1_config/: a1.yaml
src/vio_stereo/include/vio_stereo/common/: parameters.h
src/vio_stereo/include/vio_stereo/estimator/: estimator.h  feature_manager.h
src/vio_stereo/include/vio_stereo/factor/: imu_factor.h  local_parameterization.h  marginalization_factor.h  preintegration.h  projection_1frame_2cam_factor.h  projection_2frame_1cam_factor.h  projection_2frame_2cam_factor.h  projection_factor.h
src/vio_stereo/include/vio_stereo/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
src/vio_stereo/launch/: vio.launch
src/vio_stereo/src/common/: common.cpp  parameters.cpp
src/vio_stereo/src/estimator/: estimator.cpp  feature_manager.cpp
src/vio_stereo/src/factor/: local_parameterization.cpp  marginalization_factor.cpp  preintegration.cpp  projection_1frame_2cam_factor.cpp  projection_2frame_1cam_factor.cpp  projection_2frame_2cam_factor.cpp
src/vio_stereo/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/vio_stereo/vio_stereo/: CMakeLists.txt
src/vio_stereo/vio_stereo/include/vio_stereo/common/: camera_pose_visualization.h  (+3 more)
src/vio_stereo/vio_stereo/src/: vio_node.cpp
src/vio_stereo/vio_stereo/src/common/: camera_pose_visualization.cpp  ros_publish.cpp
src/vio_stereo/vio_stereo/src/factor/: projection_1frame_2cam_factor.cpp  projection_2frame_1cam_factor.cpp  projection_2frame_2cam_factor.cpp  projection_factor.cpp
src/vio_stereo/vio_stereo/src/featureTracker/: feature_tracker.cpp
(+38 files in other folders)
