<?xml version="1.0"?>
<package>
  <name>vio_stereo</name>
  <version>0.0.0</version>
  <description>The vio_stereo package</description>

  <maintainer email="matthew603216573@gmail.com">gexu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_models</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_models</run_depend>
  
  <export>
  </export>
</package>